--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -140,7 +140,8 @@ p.body {
 
 ul,
 ol,
-menu {
+menu,
+nav {
   list-style: none;
   padding-left: 0;
 }
